--- a/style.css
+++ b/style.css
@@ -1,24 +1,133 @@
-.wrapper {
+/* http://meyerweb.com/eric/tools/css/reset/ 
+   v2.0 | 20110126
+   License: none (public domain)
+*/
+
+html, body, div, span, applet, object, iframe,
+h1, h2, h3, h4, h5, h6, p, blockquote, pre,
+a, abbr, acronym, address, big, cite, code,
+del, dfn, em, img, ins, kbd, q, s, samp,
+small, strike, strong, sub, sup, tt, var,
+b, u, i, center,
+dl, dt, dd, ol, ul, li,
+fieldset, form, label, legend,
+table, caption, tbody, tfoot, thead, tr, th, td,
+article, aside, canvas, details, embed, 
+figure, figcaption, footer, header, hgroup, 
+menu, nav, output, ruby, section, summary,
+time, mark, audio, video {
+	margin: 0;
+	padding: 0;
+	border: 0;
+	font-size: 100%;
+	font: inherit;
+	vertical-align: baseline;
+}
+/* HTML5 display-role reset for older browsers */
+article, aside, details, figcaption, figure, 
+footer, header, hgroup, menu, nav, section {
+	display: block;
+}
+body {
+	line-height: 1;
+}
+ol, ul {
+	list-style: none;
+}
+blockquote, q {
+	quotes: none;
+}
+blockquote:before, blockquote:after,
+q:before, q:after {
+	content: '';
+	content: none;
+}
+table {
+	border-collapse: collapse;
+	border-spacing: 0;
+}
+/*my css reset*/
+*, *:before, *:after{
+	box-sizing: border-box;
+}
+html{
+	font-size: 16px;
+}
+body{
+	background-color: #F5F5F5;
+	font-family: 'Roboto', sans-serif;
+}
+.todo-heading{
+	color: lightcoral;
+	font-weight: 100;
+	font-size: 6rem;
 	text-align: center;
-	margin-top: 100px;
+	margin-top: 3rem;
+	margin-bottom: 1rem;
+}
+
+.wrapper {
+	/* text-align: center;
+	margin: 0 auto;
+	width: 30rem;
+	box-shadow: 2px 2px 10px grey;
+	background-color: white; */
+	background: #fff;
+    margin:  0 auto;
+    box-shadow: 0 2px 4px 0 rgba(0, 0, 0, 0.2), 0 25px 50px 0 rgba(0, 0, 0, 0.1);
+	width: 30rem;
+
 }
 #inputText {
-	width: 450px;
-	padding: 15px;
-	border-radius: 20px;
-	box-shadow: 0 0 20px 0; 
+	width: 100%;
+	padding: 1rem 0;
+	font-weight: 100;
+	color: black;
+	font-size: 1.3rem;
 }
+input::placeholder {
+	color: lightgrey;
+	font-weight: 100;
+	font-size: 1.3rem;
+	padding: 0 1rem;
+  
+  }
 li {
 	text-decoration: none;
 	display: flex;
-	justify-content: center;
+	justify-content: space-between;
 	align-items: center;
-	font-size: 50px;
+	font-size: 1.3rem;
+	color: black;
+	font-weight: 100;
+	border-bottom: 1px solid lightgray;
+	padding: 1rem 0;
+
+}
+
+.toggle{
+	height: 40px;
+    width: 40px;
+   border: 1rem solid black;
+   border-radius: 50%;
 }
 #flex{
 	display: flex;
-	justify-content: center;
+	justify-content: space-around;
 	align-items: center;
+	padding: 0.8rem 0;
+	box-shadow: 0 1px 1px rgba(0, 0, 0, 0.2), 0 8px 0 -3px #f6f6f6, 0 9px 1px -3px rgba(0, 0, 0, 0.2), 0 16px 0 -6px #f6f6f6, 0 17px 2px -6px rgba(0, 0, 0, 0.2);
+
+}
+button{
+	padding: 3px 7px;
+	margin-left: 10px;
+    text-decoration: none;
+    border: 1px solid transparent;
+    border-radius: 3px;
+	font-weight: 100;
+	color: #777;
+	border: 1px solid rgba(175, 47, 47, 0.2);
 }
 input[type="checkbox"]:checked + p{
 	text-decoration: line-through;
